# smartstep

./: .gitignore  CLAUDE.md  README.md  sync.bat
backend/: .env.example  Dockerfile  gunicorn.conf.py  manage.py  pyproject.toml
backend/api/: admin.py  models.py  otp.py  serializers.py  urls.py  views.py  whatsapp.py
backend/api/management/commands/: link_user_phone.py
backend/api/migrations/: 0001_initial.py
backend/api/tests/: test_endpoints.py
backend/content/: admin.py  models.py
backend/content/management/commands/: apply_cross_category_tags.py  expand_catalog.py  refine_cognitive_ladder.py  refine_digital_ladder.py  refine_financial_ladder.py  refine_household_ladder.py  refine_navigation_ladder.py  refine_social_ladder.py  seed_adult_catalog.py  seed_age14_catalog.py  seed_age15_catalog.py  seed_age16_catalog.py  (+14 more)
backend/content/migrations/: 0001_initial.py  0002_task_status.py  0003_task_parent_note_md.py  0004_add_sex_filter_to_task.py  0005_add_repetitions_required.py  0006_set_repetitions_by_category.py  0007_task_religion.py
backend/content/tests/: test_models.py
backend/notifications/: admin.py  models.py
backend/notifications/migrations/: 0001_initial.py
backend/rewards/: admin.py  models.py
backend/rewards/migrations/: 0001_initial.py  0002_rewarditem_status.py
backend/smartstep/: asgi.py  wsgi.py
backend/smartstep/settings/: base.py  dev.py  prod.py
backend/templates/admin/: telemetry_summary.html
backend/userdata/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/userdata/migrations/: 0001_initial.py
(+71 files in other folders)
